fix: header wrapping onto new line

--- a/frontend/src/components/tabHeader/tab-header.css
+++ b/frontend/src/components/tabHeader/tab-header.css
@@ -5,6 +5,7 @@
   padding-bottom: 6px !important;
   letter-spacing: 0.5px;
   font-weight: 300;
+  white-space: nowrap;
 }
 
 .nav-item-plain:hover {
@@ -24,6 +25,7 @@
   color: white;
   font-weight: 700;
   letter-spacing: 0.5px;
+  white-space: nowrap;
 }
 
 .selected-nav-item:focus {
